--- a/Xamarin.Forms.ImageEntry/Xamarin.Forms.ImageEntry.csproj
+++ b/Xamarin.Forms.ImageEntry/Xamarin.Forms.ImageEntry.csproj
@@ -6,5 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0" />
   </ItemGroup>
 </Project>
