--- a/nuget/ImageEntry.nuspec
+++ b/nuget/ImageEntry.nuspec
@@ -17,11 +17,32 @@
     <summary>Use a ImageEntry in your Xamarin.Forms projects!</summary>
 <tags>xamarin, netstandard, xam.pcl, android, xamarin.forms, ios, image, entry, imageentry</tags>
     <dependencies>
-         <dependency id="Xamarin.Forms" version="2.3.4.224" />
+         <dependency id="Xamarin.Forms" version="3.0.0.446417" />
     </dependencies>
   </metadata>
   <files>
-     
+
+    <!--Core-->
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Abstractions\bin\Release\HyperLink.FormsPlugin.Abstractions.dll" target="lib\portable-net45+wp80+win8+wpa81\HyperLink.FormsPlugin.Abstractions.dll" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Abstractions\bin\Release\HyperLink.FormsPlugin.Abstractions.xml" target="lib\portable-net45+wp80+win8+wpa81\HyperLink.FormsPlugin.Abstractions.xml" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Abstractions\bin\Release\HyperLink.FormsPlugin.Abstractions.pdb" target="lib\portable-net45+wp80+win8+wpa81\HyperLink.FormsPlugin.Abstractions.pdb" />
+
+       <!--Xamarin.Android-->
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Android\bin\Release\HyperLink.FormsPlugin.Android.dll" target="lib\MonoAndroid10\HyperLink.FormsPlugin.Android.dll" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Android\bin\Release\HyperLink.FormsPlugin.Android.xml" target="lib\MonoAndroid10\HyperLink.FormsPlugin.Android.xml" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Android\bin\Release\HyperLink.FormsPlugin.Android.pdb" target="lib\MonoAndroid10\HyperLink.FormsPlugin.Android.pdb" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Android\bin\Release\HyperLink.FormsPlugin.Abstractions.dll" target="lib\MonoAndroid10\HyperLink.FormsPlugin.Abstractions.dll" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Android\bin\Release\HyperLink.FormsPlugin.Abstractions.xml" target="lib\MonoAndroid10\HyperLink.FormsPlugin.Abstractions.xml" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.Android\bin\Release\HyperLink.FormsPlugin.Abstractions.pdb" target="lib\MonoAndroid10\HyperLink.FormsPlugin.Abstractions.pdb" />
+
+
+     <!--Xamarin.iOSUnified-->
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.iOS\bin\iPhone\Release\HyperLink.FormsPlugin.iOS.dll" target="lib\Xamarin.iOS10\HyperLink.FormsPlugin.iOS.dll" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.iOS\bin\iPhone\Release\HyperLink.FormsPlugin.iOS.xml" target="lib\Xamarin.iOS10\HyperLink.FormsPlugin.iOS.xml" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.iOS\bin\iPhone\Release\HyperLink.FormsPlugin.Abstractions.dll" target="lib\Xamarin.iOS10\HyperLink.FormsPlugin.Abstractions.dll" />
+     <file src="../src/HyperLink\HyperLink.FormsPlugin.iOS\bin\iPhone\Release\HyperLink.FormsPlugin.Abstractions.xml" target="lib\Xamarin.iOS10\HyperLink.FormsPlugin.Abstractions.xml" />
+
+  
       
 </files>
 </package>
